--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <a-cursor> </a-cursor>
       </a-camera>
 
-      <a-entity id="scene1" visible="true">
+      <a-entity id="scene1" visible="false">
         <a-entity id="title" position="2.1 2.4 -2"
           text=" width: 5; color: white; value: CC Sim">
         </a-entity>
@@ -80,14 +80,66 @@
           <a-entity position="0 -.15 .1" 
           text="anchor: left;width:1; wrapCount: 35; color: white; value: You are the manager of a commercial fishing company. You're goal is to run your business without ruining the environment with your choices. Will you comply or do whats best for your company?">
           </a-entity>
-          <a-box position=".6 -.4 .03" color="white" width=".5" height=".1" depth=".2">
+          <a-box scene2continue position=".6 -.4 .03" color="white" width=".5" height=".1" depth=".2">
             <a-entity position="-.19 0 .1"
               text="anchor: left; width: 2; color: black; value: Continue">
             </a-entity>
           </a-box>       
         </a-box> 
       </a-entity>
-      <a-entity environment="preset: forest; lightPosition:0 1 1;"></a-entity>
+      <a-entity id="scene4" visible="true">
+          <a-entity position="-2 2 -5"
+            text="anchor: left; width: 10; color: black; value: Problem Arises">
+          </a-entity>          
+          <a-entity position="-2 1 -5"
+            text="anchor: left; width: 5; color: black; value: You come across a school of highly sought out fish that you can sell for a large profit. You face a dilemma on what method you should use to catch the fish. Should you use the trawling method, which is more harmful to the population, or should you use the pole and line method?">
+          </a-entity>
+              
+          <a-entity position="-6 2 0" rotation="0 90 0"
+          text="anchor: left; width: 10; color: black; value: Purse Seine">
+        </a-entity> 
+          <a-entity position="-6 1.5 0" rotation="0 90 0"
+            text="anchor: left; width: 3.3; color: black; value: A purse seine is a large wall of netting deployed around an entire area or school of fish.">
+          </a-entity>
+          
+        <a-cylinder position="-5 0 -1.2" height="2" color="green" radius=".2">
+          <a-box position="0 .95 0" rotation="0 0 -20" color="green" height=".2" depth=".2" width=".2">
+            <a-sphere position="0 .05 0" color="red" radius=".1">
+              <!-- <a-entity position="0 .1 .07" rotation="-90 90 0"
+              text="anchor: left; width: 1; color: black; value: Press">
+            </a-entity> -->
+            </a-sphere>
+          </a-box>
+        </a-cylinder>
+
+          <a-entity position="-6 2 4" rotation="0 90 0"
+          text="anchor: left; width: 10; color: black; value: Trawling">
+        </a-entity> 
+          <a-entity position="-6 1.5 4" rotation="0 90 0"
+            text="anchor: left; width: 3.3; color: black; value: Trawling is a method of fishing that involves actively dragging or pulling a fishing nets along the bottom of the sea.">
+          </a-entity>
+          <a-cylinder position="-5 0 2.8" height="2" color="green" radius=".2">
+            <a-box position="0 .95 0" rotation="0 0 -20" color="green" height=".2" depth=".2" width=".2">
+              <a-sphere position="0 .05 0" color="red" radius=".1"></a-sphere>
+            </a-box>
+          </a-cylinder>
+
+          <a-entity position="-6 2 8" rotation="0 90 0"
+          text="anchor: left; width: 10; color: black; value: Pole and Line">
+        </a-entity> 
+          <a-entity position="-6 1.5 8" rotation="0 90 0"
+            text="anchor: left; width: 3.3;  color: black; value: Pole and line fishing uses hand held or mechanically operated poles with baited hooks.">
+          </a-entity>
+          <a-cylinder position="-5 0 6.8wa" height="2" color="green" radius=".2">
+            <a-box position="0 .95 0" rotation="0 0 -20" color="green" height=".2" depth=".2" width=".2">
+              <a-sphere position="0 .05 0" color="red" radius=".1"></a-sphere>
+            </a-box>
+          </a-cylinder>
+
+        <a-box width="15" height="20" depth="5" position="-10 0 2" rotation="0 90 0"></a-box>
+      </a-entity>
+      <a-entity id="env" environment="preset: forest;ground:hills; lightPosition:0 1 1;playArea:1.5"></a-entity> 
+      <!-- <a-entity id="env" envirosnment="preset: yavapai;ground:hills; lightPosition:0 1 1;playArea:1.5"></a-entity> -->
     </a-scene>
   </body>
   <script></script>
