--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <a-cursor> </a-cursor>
       </a-camera>
 
-      <a-entity id="scene1" visible="false">
+      <a-entity id="scene1" visible="true">
         <a-entity id="title" position="2.1 2.4 -2"
           text=" width: 5; color: white; value: CC Sim">
         </a-entity>
@@ -87,7 +87,7 @@
           </a-box>       
         </a-box> 
       </a-entity>
-      <a-entity id="scene4" visible="true">
+      <a-entity id="scene4" visible="false">
           <a-entity position="-2 2 -5"
             text="anchor: left; width: 10; color: black; value: Problem Arises">
           </a-entity>          
@@ -130,15 +130,41 @@
           <a-entity position="-6 1.5 8" rotation="0 90 0"
             text="anchor: left; width: 3.3;  color: black; value: Pole and line fishing uses hand held or mechanically operated poles with baited hooks.">
           </a-entity>
-          <a-cylinder position="-5 0 6.8wa" height="2" color="green" radius=".2">
+          <a-cylinder position="-5 0 6.8" height="2" color="green" radius=".2">
             <a-box position="0 .95 0" rotation="0 0 -20" color="green" height=".2" depth=".2" width=".2">
               <a-sphere position="0 .05 0" color="red" radius=".1"></a-sphere>
             </a-box>
           </a-cylinder>
 
-        <a-box width="15" height="20" depth="5" position="-10 0 2" rotation="0 90 0"></a-box>
+        <a-box width="15" height="20" depth="1" position="-10 0 2" rotation="0 90 0">     
+          <a-entity position="-7 9 .59 "
+            text="anchor: left; width: 10;  color: black; value:Reputation">
+          </a-entity>
+
+          <a-entity position="-6 8 .59 "
+            text="anchor: left; width: 10;  color: black; value:Environment">
+          </a-entity> 
+          <a-box position="0 7.3 .05" width="10" color="black">
+            <a-box position="-.5 0 .05" width="9" color="green" height=".9"></a-box>
+          </a-box>
+          <a-entity position="-6 6 .59 "
+          text="anchor: left; width: 10;  color: black; value:Worker Happiness">
+          </a-entity> 
+          <a-box position="0 5.3 .05" width="10" color="black">
+            <a-box position="-.5 0 .05" width="9" color="green" height=".9"></a-box>
+          </a-box>          
+          <a-entity position="-6 4 .59 "
+          text="anchor: left; width: 10;  color: black; value:Profit">
+          </a-entity> 
+          <a-box position="0 3.3 .05" width="10" color="black">
+            <a-box position="-.5 0 .05" width="9" color="green" height=".9"></a-box>
+          </a-box>
+
+
+          
+        </a-box>
       </a-entity>
-      <a-entity id="env" environment="preset: forest;ground:hills; lightPosition:0 1 1;playArea:1.5"></a-entity> 
+      <a-entity id="env" environment="preset: forest;dressing:trees;dressingAmount:1200;playArea:4;lightPosition:0 1 1;"></a-entity> 
       <!-- <a-entity id="env" envirosnment="preset: yavapai;ground:hills; lightPosition:0 1 1;playArea:1.5"></a-entity> -->
     </a-scene>
   </body>
